...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5"
        app:layout_constraintVertical_bias="0.147" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="228dp"
        android:onClick="startPauseBtn"
        android:text="start"
...
        app:layout_constraintBottom_toTopOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="28dp"
        android:onClick="resetBtn"
        android:text="reset"
        app:layout_constraintBottom_toTopOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/button9"
        android:layout_width="55dp"
        android:layout_height="38dp"
        android:background="@color/white"
        android:text="+"
        android:textColor="#000000"
        android:textSize="14sp"
...
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textP2Name"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/button12"
        android:layout_width="55dp"
        android:layout_height="39dp"
        android:background="@color/white"
        android:shadowColor="#000000"
        android:text="+"
        android:textColor="#000000"
...
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/button13"
        android:layout_width="55dp"
        android:layout_height="33dp"
        android:background="@color/white"
        android:shadowColor="#000000"
        android:text="-"
        android:textColor="#000000"
...
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.88" />

    <Button
        android:id="@+id/button11"
        android:layout_width="55dp"
        android:layout_height="38dp"
        android:background="@color/white"
        android:text="-"
        android:textColor="#000000"
        android:textSize="14sp"
...
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15"
        app:layout_constraintVertical_bias="0.476" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="162dp"
        android:layout_height="47dp"
        android:background="@color/purple_500"
        android:text="Reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
